--- a/speed.html
+++ b/speed.html
@@ -112,12 +112,12 @@
 </head>
 <body>
     <div class="content">
-        <!-- 默认加载齐鲁测速页面 -->
-        <iframe id="mainFrame" src="https://speed.qlu.edu.cn/"></iframe>
+        <!-- 默认加载南光测速页面 -->
+        <iframe id="mainFrame" src="https://fs.nju.edu.cn/speed/"></iframe>
     </div>
     
     <div class="navbar">
-        <a href="#" class="nav-btn active-btn" data-url="https://speed.qlu.edu.cn/">南光</a>
+        <a href="#" class="nav-btn active-btn" data-url="https://speed.qlu.edu.cn/">齐鲁</a>
         <a href="#" class="nav-btn" data-url="http://speed.nuaa.edu.cn/">南航</a>
         <a href="#" class="nav-btn" data-url="https://test.nju.edu.cn/">南大</a>
         <a href="#" class="nav-btn" data-url="https://test.ustc.edu.cn/">中科</a>
