--- a/speed.html
+++ b/speed.html
@@ -112,15 +112,15 @@
 </head>
 <body>
     <div class="content">
-        <!-- 默认加载南光测速页面 -->
-        <iframe id="mainFrame" src="https://fs.nju.edu.cn/speed/"></iframe>
+        <!-- 默认加载齐鲁测速页面 -->
+        <iframe id="mainFrame" src="https://speed.qlu.edu.cn/"></iframe>
     </div>
     
     <div class="navbar">
         <a href="#" class="nav-btn active-btn" data-url="https://speed.qlu.edu.cn/">齐鲁</a>
+        <a href="#" class="nav-btn" data-url="https://fs.nju.edu.cn/speed/">南光</a>
         <a href="#" class="nav-btn" data-url="http://speed.nuaa.edu.cn/">南航</a>
         <a href="#" class="nav-btn" data-url="https://test.nju.edu.cn/">南大</a>
-        <a href="#" class="nav-btn" data-url="https://test.ustc.edu.cn/">中科</a>
     </div>
     
     <script>
