--- a/speed.html
+++ b/speed.html
@@ -118,7 +118,7 @@
     
     <div class="navbar">
         <a href="#" class="nav-btn active-btn" data-url="https://speed.qlu.edu.cn/">齐鲁</a>
-        <a href="#" class="nav-btn" data-url="http://speed.nuaa.edu.cn/">南航</a>
+        <a href="#" class="nav-btn" data-url="https://speed.nuaa.edu.cn/">南航</a>
         <a href="#" class="nav-btn" data-url="https://fs.nju.edu.cn/speed/">南光</a>
         <a href="#" class="nav-btn" data-url="https://test.nju.edu.cn/">南大</a>
     </div>
